[gd_scene load_steps=2 format=3 uid="uid://yn6ir2hk0ghx"]

[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_d7uhx"]

[node name="GameManager" type="Node"]
script = ExtResource("1_d7uhx")

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="stop_enemy_spawners" from="." to="." method="_on_stop_enemy_spawners"]
[connection signal="update_scraps" from="." to="." method="_on_update_scraps"]
